<resources>
    <string name="app_name">SaveTheBeach</string>
    <!--SPLASH ACTIVITY-->
    <string name="VAL_COMENZAR">COMENZAR</string>
    <string name="VAL_LOGIN">Log-In</string>
    <string name="VAL_IMAGEN">Image</string>
    <string name="label_SignUp"><u>¿No eres usuario? Date de alta.</u></string>

    <!--SIGN UP-->
    <string name="VAL_SIGN_UP">Sign Up</string>
    <string name="HINT_CORREO">Introduce tu correo electrónico</string>
    <string name="HINT_PASSWORD">Introduce una contraseña</string>
    <string name="HINT_PASSWORD_SHORT">Contraseña</string>
    <string name="HINT_PASSWORD_REP">Repite la contraseña</string>
    <string name="VAL_REGISTRAR">REGISTRAR</string>
    <string name="VAL_LOGIN_CAPS">Log in</string>
    <string name="KEY__SIGN_UP_SUCCESS">SignUpSuccess</string>

    <!--SIGN UP SUCCESS-->
    <string name="VAL_BIENVENIDO">Bienvenido</string>
    <string name="VAL_CORREO_CONFIRMACION">Te enviaremos un correo a <b>%1$s</b> confirmando el alta de tu cuenta.</string>

    <!--SPLASH LOG IN-->
    <string name="HINT_USUARIO">Usuario</string>
    <string name="HINT_PASS">Password</string>
    <string name="VAL_BACK">REGRESAR</string>

    <!--USER PROFILE-->
    <string name="VALOR_USER_PROFILE">Tu Perfil</string>

    <!--ERRORES Y ESTADOS-->
    <string name="STRING_FILL">%1$s</string>
    <string name="VAL_ERROR_GENERICO">Ha ocurrido un error al realizar la operación. Vuelva a intentarlo y sino póngase en contacto con el administrador de la aplicación.</string>
    <string name="VAL_ERROR_PASSWORD_DIFERENTE">Error, las contraseñas que introduzca han de ser idénticas.</string>
    <string name="VAL_ERROR_EMAIL">La dirección de correo que ha consignado no tiene formato adecuado.</string>
    <string name="VAL_ERROR_EMPTY_FIELDS">Error, no puede dejar campos vacíos en este formulario.</string>
    <string name="VAL_CONECTANDO">Conectando con el servidor</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Acerca de SaveTheBeach</string>


    <!--BEACH LAYOUT-->
    <string name="VAL_BEACH_NOMBRE">%1$s</string>
    <string name="VAL_BEACH_GRADOS">%1$d°</string>
    <string name="VAL_AEMET">Informacion obtenida a través de:</string>
    <string name="VAL_BEACH_ESTADO_CIELO">%1$s</string>
    <string name="VAL_VIENTO">Viento %1$s</string>
    <string name="VAL_OLEAJE">Oleaje %1$s</string>
    <string name="VAL_TEMP_AGUA">Temperatura Agua %1$d</string>
    <string name="VAL_UV">Indice UV: %1$d</string>
    <string name="VAL_FECHA_ACT">Fecha Actualizacion %1$s</string>
    <string name="KEY_PLAYA_SEL">PlayaSeleccionada</string>
    <string name="title_activity_maps">Map</string>
    <string name="BEACH_LIST">Las Playas</string>
    <string name="SELECCION_MUNICIPIO">Filtro: %1$s</string>
    <string name="CONTEXT_MUNICIPIOS">Elegir Municipio</string>
    <string name="TODAS_LAS_PLAYAS">Todas Las Playas</string>
    <string name="tab_filtrar">Filtrar</string>
    <string name="tab_ordenar">Ordenar</string>
    <string name="tab_mapa">MAPA</string>
    <string name="DIALOG_CANCEL">Cancelar</string>
    <string name="ELEGIR_MUNICIPIO">Elegir Municipio</string>
    <string name="edad">Edad</string>
    <string name="fecha_nacimietno">Fecha Nacimiento</string>
    <string name="todo">TODO</string>
    <string name="editar_foto">Editar Foto</string>
    <string name="editar_datos">Editar Datos</string>
    <string name="regresar">Regresar</string>
    <string name="nombre">Nombre</string>
    <string name="email">Email</string>
    <string name="descripci_n">Descripción</string>
    <string name="cuenta">Mi Cuenta</string>
    <string name="comunicate">Si tienes algún problema, comúnicate con nosotros en:</string>
    <string name="mail">savethebeachapp@gmail.com</string>
    <string name="fecha">Fecha:</string>
    <string name="hora">Hora:</string>
    <string name="nueva_alerta">Nueva Alerta</string>
    <string name="titulo">Titulo</string>
    <string name="descripcion">Descripcion</string>
    <string name="continuar">Continuar</string>
    <string name="cancelar">Cancelar</string>
    <string name="seleccione_la_playa">Seleccione la playa:</string>
    <string name="fecha_">Fecha</string>
    <string name="hora_">Hora</string>
    <string name="toast_nueva_alerta">Ninguno de los campos debe estar en blanco</string>
    <string name="a_adir">Añadir</string>
    <string name="fotousuario">fotoUsuario</string>
    <string name="fecha_de_nacimiento">Fecha de Nacimiento</string>
    <string name="TV_DESCRIPCION">Introduce información interesante acerca de ti :)</string>
    <string name="las_playas">Las Playas</string>
    <string name="beach_alerts">Beach Alerts</string>
    <string name="mapa">Mapa</string>
    <string name="beach_fans">Beach Fans</string>
    <string name="conexion">Conexion</string>
    <string name="elegirfoto">Seleccione una imagen</string>
    <string name="log_in">Log In</string>
    <string name="log_out">Log Out</string>
    <string name="fecha_1_s">Fecha: %1$s</string>
    <string name="hora_1_s">Hora: %1$s</string>
    <string name="creador_1_s">Creador: %1$s</string>
    <string name="debe_rellenar_todos_los_campos">Debe rellenar todos los campos</string>
    <string name="info">Recuerde: Debe pulsar el botón aceptar para guardar los cambios</string>
    <string name="seleccionar_opcion">Seleccione una opcion:</string>
    <string name="seleccionar_playa">Seleccione una playa:</string>
    <string name="localizacion">Localización:</string>
    <string name="textview">TextView</string>
    <string name="usuarios_interesados">Colaboradores:</string>
    <string name="CLAVE_ALERTA">CLAVE ALERTA</string>
    <string name="DIALOG_ACEPTAR">ACEPTAR</string>
    <string name="DIALOG_SEGURO_LOG_OUT">Esta seguro que desea desconectar la cuenta : %1$s</string>
    <string name="asunto">Asunto</string>
    <string name="contenido_del_mensaje">Contenido del mensaje</string>
    <string name="enviar">Enviar</string>
    <string name="enviar_mail">Contactar</string>

    <!--ACERCA_DE-->
    <string name="nombre_desarrollador_1">Miguel Sánchez</string>
    <string name="descripcion_desarrollador_1">Software developer, Tester and Apprentice of the team</string>
    <string name="correo_desarrolladores">savethebeachapp@gmail.com</string>

    <string name="nombre_desarrollador_2">Raul Ordás</string>
    <string name="descripcion_desarrollador_2">CEO, Software developer, Analyst and Master Designer</string>

    <string name="nombre_desarrollador_3">Juan Notario</string>
    <string name="descripcion_desarrollador_3">Software developer, Technical assistant and Junior Designer </string>

    <string name="nombre_desarrollador_4">Andrés Pérez</string>
    <string name="descripcion_desarrollador_4">Coordinator, Software developer, Analyst and Junior Designer</string>
</resources>
