<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/PADDING_30"
    android:paddingTop="@dimen/PADDING_30"
    android:paddingRight="@dimen/PADDING_30">

    <Button
        android:id="@+id/btnCerrarLogin"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/ic_close_scalable" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bluelight"
        android:text="@string/VAL_LOGIN_CAPS"
        android:textAlignment="center"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="110sp" />

    <EditText
        android:id="@+id/etxLoginNombre"
        android:layout_width="match_parent"
        android:layout_height="82dp"
        android:layout_weight="2"
        android:ems="10"
        android:hint="@string/HINT_USUARIO"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etxLoginPassword"
        android:layout_width="match_parent"
        android:layout_height="76dp"
        android:layout_weight="2"
        android:ems="10"
        android:hint="@string/HINT_PASS"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="@dimen/PADDING_30"
        android:layout_marginBottom="@dimen/PADDING_30"
        android:layout_weight="2"
        android:background="@color/colorPrimaryDark"
        android:text="@string/VAL_LOGIN"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

</LinearLayout>