<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.Consulta_Usuarios_Final">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/foto_UserF"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:foregroundGravity="top"
        android:src="@drawable/hombre"
        app:civ_border_color="#FF000000" />

    <TextView
        android:id="@+id/tvNombreF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/bambino_bold"
        android:gravity="center"
        android:hint="@string/nombre"
        android:paddingLeft="@dimen/PADDING_30"
        android:paddingTop="@dimen/PADDING_30"
        android:paddingRight="@dimen/PADDING_30"
        android:textColor="@android:color/black"
        android:textSize="35sp" />

    <TextView
        android:id="@+id/tvEmailF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/bambino"
        android:gravity="center"
        android:hint="@string/email"
        android:paddingTop="@dimen/PADDING_30"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvFechaNacF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/bambino"
        android:gravity="center"
        android:hint="@string/fecha_de_nacimiento"
        android:paddingTop="@dimen/PADDING_30"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/tvDescripcionF"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:fontFamily="@font/bambino"
        android:gravity="center"
        android:hint="@string/descripci_n"
        android:paddingTop="@dimen/PADDING_30"
        android:paddingBottom="20dp"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <Button
        android:id="@+id/btnEnviarMail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorMarronClaro"
        android:fontFamily="@font/bambino_bold"
        android:onClick="enviarMail"
        android:padding="20dp"
        android:text="@string/enviar_mail" />

</LinearLayout>