<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/PADDING_30"
    android:paddingRight="@dimen/PADDING_30"
    android:paddingBottom="@dimen/PADDING_30"
    tools:context=".activities.SignUp_Activity">

    <LinearLayout
        android:id="@+id/linear_signup"
        android:layout_width="338dp"
        android:layout_height="385dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="122dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_SignUp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:fontFamily="@font/bluelight"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/VAL_SIGN_UP"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="110sp" />

        <EditText
            android:id="@+id/etxCorreo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/HINT_CORREO"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimaryDark" tools:targetApi="o"/>

        <EditText
            android:id="@+id/etxPass"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/HINT_PASSWORD"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimaryDark" tools:targetApi="o"/>

        <EditText
            android:id="@+id/etxPassRep"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:autofillHints=""
            android:backgroundTint="@color/colorPrimary"
            android:hint="@string/HINT_PASSWORD_REP"
            android:inputType="textPersonName"
            android:textColorHint="@color/colorPrimaryDark" tools:targetApi="o"/>

    </LinearLayout>

    <Button
        android:id="@+id/btnSignUpBack"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="@dimen/PADDING_30"
        android:layout_marginTop="@dimen/PADDING_30"
        android:layout_marginBottom="-88dp"
        android:background="@drawable/ic_back_scalable"
        android:onClick="regresarSplashScreen" />

    <Button
        android:id="@+id/btnSignUpAceptar"
        android:layout_width="326dp"
        android:layout_height="58dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="0dp"
        android:background="@color/colorMarronClaro"
        android:onClick="registrarUsuario"
        android:text="@string/VAL_REGISTRAR"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

</RelativeLayout>