<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/llerror"
    android:layout_width="330dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="@dimen/PADDING_30"
    android:paddingTop="@dimen/PADDING_30"
    android:paddingRight="@dimen/PADDING_30">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:layout_weight="2">

        <ImageView
            android:id="@+id/imgError"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="0dp"
            android:contentDescription="@string/VAL_IMAGEN"
            android:scaleType="fitXY"
            app:srcCompat="@drawable/ic_cancel_black_24dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/tvErrorGenerico"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="2"
        android:fontFamily="@font/bambino"
        android:text="@string/STRING_FILL"
        android:textAlignment="center" />

    <Button
        android:id="@+id/btnErrorRegresar"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:layout_marginTop="@dimen/PADDING_30"
        android:layout_marginBottom="@dimen/PADDING_30"
        android:layout_weight="2"
        android:background="@color/colorPrimaryDark"
        android:text="@string/VAL_BACK"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

</LinearLayout>