<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlSignUpSuccess"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    android:onClick="backToSplash"
    tools:context=".activities.SignUp_Success_Activity">

    <TextView
        android:id="@+id/tvBienvenido"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="75dp"
        android:fontFamily="@font/bambino_light"
        android:gravity="center"
        android:text="@string/VAL_BIENVENIDO"
        android:textColor="@color/colorMarronClaro"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/tvcorreo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="@dimen/PADDING_30"
        android:layout_marginTop="424dp"
        android:layout_marginRight="@dimen/PADDING_30"
        android:fontFamily="@font/bambino_light"
        android:gravity="center"
        android:text="@string/VAL_CORREO_CONFIRMACION"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp" />

    <ImageView
        android:id="@+id/imgSuccess"
        android:layout_width="match_parent"
        android:layout_height="171dp"
        android:layout_alignEnd="@+id/tvBienvenido"
        android:layout_alignParentTop="true"
        android:layout_marginTop="185dp"
        android:layout_marginEnd="0dp"
        android:contentDescription="@string/VAL_IMAGEN"
        app:srcCompat="@drawable/ic_circle" />
</RelativeLayout>