<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/PADDING_30"
    android:paddingTop="@dimen/PADDING_10"
    android:paddingRight="@dimen/PADDING_30"
    android:weightSum="10"
    tools:context=".activities.Nueva_Alerta">

    <TextView
        android:id="@+id/txtAnia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/bambino_light"
        android:text="@string/nueva_alerta"
        android:textAlignment="center"
        android:textColor="@color/azulViento"
        android:textSize="24sp"
        android:textStyle="normal|bold" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtTituloNA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/titulo"
            android:paddingTop="@dimen/PADDING_10"
            android:paddingBottom="@dimen/PADDING_15" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/txtDescripcionNA"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/descripci_n"
            android:inputType="textMultiLine"
            android:paddingTop="@dimen/PADDING_10"
            android:paddingBottom="@dimen/PADDING_15" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginTop="@dimen/PADDING_15"
        android:layout_weight="2"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgAlerta"
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            app:srcCompat="@drawable/imagen_alertas_pruebas" />

        <ImageView
            android:id="@+id/imgBotonAniadir"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/PADDING_10"
            android:layout_weight="1"
            app:srcCompat="@drawable/ic_add_image_icon" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:fontFamily="@font/bambino"
        android:paddingTop="@dimen/PADDING_10"
        android:text="@string/seleccione_la_playa"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/spPlayas"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:padding="@dimen/PADDING_5">

        <Button
            android:id="@+id/btnFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/pressed_button_effect"
            android:fontFamily="@font/bambino"
            android:onClick="Fecha"
            android:text="@string/fecha_"
            android:textColor="@color/blancoNieve" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btnHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/pressed_button_effect"
            android:fontFamily="@font/bambino"
            android:onClick="Hora"
            android:text="@string/hora_"
            android:textColor="@color/blancoNieve" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/PADDING_10">

        <TextView
            android:id="@+id/txtMuestraFecha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bambino"
            android:textAlignment="center" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/txtMuestraHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/bambino"
            android:textAlignment="center" />
    </LinearLayout>

    <Button
        android:id="@+id/btnAniadirNA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/PADDING_30"
        android:layout_weight="1.5"
        android:background="@drawable/pressed_button_effect"
        android:fontFamily="@font/bambino"
        android:onClick="subir_Alerta"
        android:text="@string/a_adir"
        android:textColor="@color/blancoNieve"
        android:textSize="18sp" />

</LinearLayout>