<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="@font/bambino_bold"
        android:gravity="center"
        android:text="Enviar Mail"
        android:textColor="@android:color/black"
        android:textSize="24sp" />

    <View
        android:id="@+id/divider9"
        android:layout_width="219dp"
        android:layout_height="22dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/etAsunto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/colorMarronClaro"
        android:ems="10"
        android:fontFamily="@font/bambino_light"
        android:hint="@string/asunto"
        android:inputType="textPersonName" />

    <View
        android:id="@+id/divider3"
        android:layout_width="match_parent"
        android:layout_height="31dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />

    <EditText
        android:id="@+id/etMensaje"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:backgroundTint="@color/colorMarronClaro"
        android:ems="10"
        android:fontFamily="@font/bambino_light"
        android:hint="@string/contenido_del_mensaje"
        android:inputType="textMultiLine" />

    <View
        android:id="@+id/divider2"
        android:layout_width="219dp"
        android:layout_height="43dp"
        android:layout_weight="1"
        android:background="?android:attr/listDivider" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:background="@color/colorMarronClaro"
        android:fontFamily="@font/bambino_bold"
        android:text="@string/enviar" />
</LinearLayout>